--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello world</h1>
-</body>
+  <head>
+    <title>Hello World!</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+      <h1 class="title">Hello World! </h1>
+      <p id="currentTime"></p>
+      <script src="js/script.js"></script>
+  </body>
 </html>
