--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <!-- <a href="https://www.instagram.com/funny_p_h_a_n_i" target="_blank" class="fa fa-instagram"></a> -->
                 <a href="https://github.com/VMutthu" target="_blank" class="fa fa-github"></a>
-                <a href="https://www.linkedin.com/in/phani-kumar-630613101/" target="_blank"
+                <a href="https://www.linkedin.com/in/muhtu-v-004298117/" target="_blank"
                     class="fa fa-linkedin"></a>
 
                 <a href="https://twitter.com/phaniku32563480" target="_blank" class="fa fa-twitter"></a>
@@ -802,7 +802,7 @@
                         <div class="social-links">
                             <!-- <a href="https://www.instagram.com/funny_p_h_a_n_i" target="_blank" class="fa fa-instagram"></a> -->
                             <a href="https://github.com/VMutthu" target="_blank" class="fa fa-github"></a>
-                            <a href="https://www.linkedin.com/in/phani-kumar-630613101/" target="_blank"
+                            <a href="https://www.linkedin.com/in/muhtu-v-004298117/" target="_blank"
                                 class="fa fa-linkedin"></a>
                             <a href="https://twitter.com/phaniku32563480" target="_blank" class="fa fa-twitter"></a>
                         </div>
@@ -842,7 +842,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-        Designed by <a href="https://www.linkedin.com/in/phani-kumar-630613101/"> <h5 style="color:red">Muttu VANGADAVATHI</h3> </a>
+        Designed by <a href="https://www.linkedin.com/in/muhtu-v-004298117/"> <h5 style="color:gainsboro">Muttu VANGADAVATHI</h3> </a>
     </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
