--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/phani.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/muthu_photo.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I'm V Muttu</h3>
